# python-my-sdk

./: .gitignore  Makefile  README.md  config.py  pyproject.toml  setup.py
python-openapi-generator-cli/: setup.py
python-openapi-generator-cli/.openapi-generator/: FILES
python-openapi-generator-cli/aioz_api_client/: README.md  __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
python-openapi-generator-cli/aioz_api_client/api/: __init__.py  api_key_api.py  api_key_model_api.py  api_key_model_verify_api.py  api_key_model_versioning_api.py  api_key_repository_api.py
python-openapi-generator-cli/aioz_api_client/docs/: ApiKeyApi.md  ApiKeyModelApi.md  ApiKeyModelVerifyApi.md  ApiKeyModelVersioningApi.md  ApiKeyRepositoryApi.md  ModelsApiKeyHistories.md  ModelsApiKeyInfo.md  ModelsApiKeyPackage.md  ModelsCommit.md  ModelsCommitMeta.md  ModelsCommitStats.md  ModelsCommitUser.md  ModelsFollow.md  ModelsMember.md  ModelsModelVersioning.md  ModelsModelVersioningGroupLite.md  ModelsOffer.md  ModelsPlatformTask.md  ModelsQueueTask.md  ModelsRepoCommit.md  ModelsUser.md  ModelsWallet.md  ModelsWalletWithAddress.md  RequestCalculateCostToVerifyAiModelRequest.md  RequestCheckValidToVerifyAiModelRequest.md  RequestDistributeTaskRequest.md  (+34 more)
scripts/: download_spec.sh  extract_schemas.py  gen.sh
src/my_platform_sdk_package/: http_client.py  main.py
tests/: conftest.py  test_api_key_model_service.py  test_api_key_model_verify_service.py  test_api_key_model_versioning_service.py  test_api_key_repository_service.py  test_api_key_service.py
(+121 files in other folders)
