[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_platform_sdk_package"         # must be unique on PyPI
version = "0.2.0"
description = "A simple my_platform_sdk_package"
readme = "README.md"
license = {text = "MIT"}
authors = [
  { name = "ThinhNguyen", email = "thinh@example.com" }
]
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/thinhtruongnguyen/python-my-sdk"

[tool.setuptools.packages.find]
where = ["src"]

